Adds xcshareddata to the gitignore file.

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ profile
 DerivedData
 .idea/
 *.hmap
+xcshareddata
 
 # ------------- Android/Eclipse Development -------------
 # built application files
